# Brickworks-rs-plugin

./: .gitignore  Cargo.toml  README.md
src/: backend.rs  builder.rs  factory.rs  lib.rs  main.rs  params.rs  plugin.rs  wrapper.rs
