[package]
name = "dist_plugin"
version = "0.1.0"
edition = "2024"

[dependencies]
nih_plug = { git = "https://github.com/robbert-vdh/nih-plug.git", features = [
    # Enables runtime checks during audio processing to ensure no 
    # memory allocations happen where they shouldn't as in 
    # the processing function
	"assert_process_allocs", 
	# Allows building the plugin as a standalone application
	# useful for testing/debugging without loading into a DAW
    "standalone"    
]}

brickworks-rs = { git = "https://github.com/FedericoMenegoz/brickworks-rs.git", rev = "a50afca"}



[lib]
crate-type = [
	# Needed for building a dynamic library (shared object) 
	# compatible with VST3 plugin formats
	"cdylib",
	# Lets you also use this crate as a normal Rust library, 
	# needed for the standalone
	"lib"
]

[workspace]
# xtask is the only boilerplate needed, it will run
# an automation script for the build
members = ["xtask"]